examples/test/testpolicy2172.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2172
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key4: value8
      key29: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value10
          key47: value24
          key5: value29
      podSelector:
        matchLabels:
          key5: value38
